[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Trophy Room.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pedestal.png" type="Texture" id=2]

[node name="Trophy Room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 100.0
margin_right = -80.0
margin_bottom = -60.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pedastal Hbox" type="HBoxContainer" parent="Margin"]
margin_right = 1760.0
margin_bottom = 920.0

[node name="L Margin" type="MarginContainer" parent="Margin/Pedastal Hbox"]
margin_bottom = 920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pedastal 1 Vbox" type="VBoxContainer" parent="Margin/Pedastal Hbox"]
margin_left = 4.0
margin_right = 585.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Margin/Pedastal Hbox/Pedastal 1 Vbox"]
margin_right = 581.0
margin_bottom = 666.0
size_flags_vertical = 3

[node name="Dinosaur1" type="Node2D" parent="Margin/Pedastal Hbox/Pedastal 1 Vbox"]

[node name="Pedastal 1" type="TextureRect" parent="Margin/Pedastal Hbox/Pedastal 1 Vbox"]
margin_top = 670.0
margin_right = 581.0
margin_bottom = 920.0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pedastal 2 Vbox" type="VBoxContainer" parent="Margin/Pedastal Hbox"]
margin_left = 589.0
margin_right = 1170.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="Margin/Pedastal Hbox/Pedastal 2 Vbox"]
margin_right = 581.0
margin_bottom = 666.0
size_flags_vertical = 3

[node name="Dinosaur2" type="Node2D" parent="Margin/Pedastal Hbox/Pedastal 2 Vbox"]
position = Vector2( -585, 0 )

[node name="Pedastal 2" type="TextureRect" parent="Margin/Pedastal Hbox/Pedastal 2 Vbox"]
margin_top = 670.0
margin_right = 581.0
margin_bottom = 920.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pedastal 3 Vbox" type="VBoxContainer" parent="Margin/Pedastal Hbox"]
margin_left = 1174.0
margin_right = 1755.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="Margin/Pedastal Hbox/Pedastal 3 Vbox"]
margin_right = 581.0
margin_bottom = 666.0
size_flags_vertical = 3

[node name="Dinosaur3" type="Node2D" parent="Margin/Pedastal Hbox/Pedastal 3 Vbox"]
position = Vector2( -1170, 0 )

[node name="Pedastal 3" type="TextureRect" parent="Margin/Pedastal Hbox/Pedastal 3 Vbox"]
margin_top = 670.0
margin_right = 581.0
margin_bottom = 920.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R Margin" type="MarginContainer" parent="Margin/Pedastal Hbox"]
margin_left = 1759.0
margin_right = 1759.0
margin_bottom = 920.0
__meta__ = {
"_edit_use_anchors_": false
}
